[package]
name = "rusty_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"]}
rand = "0.8.5"
serenity = "0.11.5"
rusqlite = "0.28.0"
